--- a/ThyoneMC/App.xaml
+++ b/ThyoneMC/App.xaml
@@ -2,8 +2,37 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ThyoneMC"
+             xmlns:viewModel="clr-namespace:ThyoneMC.MVVM.ViewModel"
+             xmlns:view="clr-namespace:ThyoneMC.MVVM.View"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+
+            <!-- StaticResource -->
+
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceDictionary Source="Themes/Color.xaml"/>
+
+                <ResourceDictionary Source="Themes/MenuButton.xaml"/>
+                <ResourceDictionary Source="Themes/AppButton.xaml"/>
+
+            </ResourceDictionary.MergedDictionaries>
+
+            <!-- Pages -->
+
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ServersViewModel}">
+                <view:ServersView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:SettingsViewModel}">
+                <view:SettingsView/>
+            </DataTemplate>
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
