--- a/ThyoneMC/Themes/ServerButton.xaml
+++ b/ThyoneMC/Themes/ServerButton.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style BasedOn="{StaticResource {x:Type ToggleButton}}"
            TargetType="RadioButton"
-           x:Key="MenuButtonTheme">
+           x:Key="ServerButtonTheme">
 
         <!-- Main -->
         <Style.Setters>
@@ -13,17 +13,21 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="RadioButton">
-                        <Grid VerticalAlignment="Stretch"
+                        <Border BorderBrush="{StaticResource Palette3}"
+                                BorderThickness="5"
+                                Margin="5,3,5,3">
+                            <Grid VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
-                              Background="{TemplateBinding Background}">
+                              Background="{StaticResource Palette4}">
 
-                            <TextBlock Text="{TemplateBinding Property=Content}"
-                                       FontSize="30"
+                                <TextBlock Text="{TemplateBinding Property=Content}"
+                                       FontSize="45"
                                        Foreground="{StaticResource PaletteWhite}"
                                        VerticalAlignment="Center"
-                                       Margin="25,74,0,74"/>
+                                       HorizontalAlignment="Center"/>
 
-                        </Grid>
+                            </Grid>
+                        </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -31,12 +35,7 @@
 
         <!-- Event -->
         <Style.Triggers>
-
-            <!-- Clicked -->
-            <Trigger Property="IsChecked" Value="True">
-                <Setter Property="Background" Value="{StaticResource Palette3}"/>
-            </Trigger>
-
+            
             <!-- Mouse Hover -->
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Cursor"  Value="Hand"/>
